[build-system]
requires = ["setuptools >= 71.0, < 81"]
build-backend = "setuptools.build_meta"

[project]
name = "ccf"
version = "7.0.0.dev10"
authors = [
  { name="CCF Team", email="CCF-Sec@microsoft.com" },
]
description = "Set of tools and utilities for the Confidential Consortium Framework (CCF)"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cbor2 >= 5.6, < 7",
    "cryptography >= 46, < 47",
    "cwt >= 3.2.0, < 4",
    "packaging >= 25, < 27"
]

[tool.setuptools]
script-files = [
    "utils/keygenerator.sh",
    "utils/submit_recovery_share.sh",
]

[project.urls]
Homepage = "https://github.com/microsoft/ccf"
Issues = "https://github.com/microsoft/ccf/issues"

[project.scripts]
ccf_cose_sign1 = "ccf.cose:sign_cli"
ccf_cose_sign1_prepare = "ccf.cose:prepare_cli"
ccf_cose_sign1_finish = "ccf.cose:finish_cli"
"read_ledger.py" = "ccf.read_ledger:main"
"ledger_viz.py" = "ccf.ledger_viz:main"
"ledger_code.py" = "ccf.ledger_code:main"
"split_ledger.py" = "ccf.split_ledger:main"
"verify_ledger_secrets_chain.py" = "ccf.verify_ledger_secrets_chain:main"