# Add Logging app
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/apps/logging)

# Add Basic app
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/apps/basic)

# Add NoBuiltins app
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/apps/nobuiltins)

# Add Programmability app
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/apps/programmability)
